sligth changes + readme
