# storage/api-docs/api-docs.json
@@ -268,6 +268,63 @@
                 }
             }
         },
+        "/api/organisations/area/radius": {
+            "get": {
+                "tags": [
+                    "Organisations"
+                ],
+                "summary": "Get organisations within a radius geographic area",
+                "description": "Returns a list of organisations whose buildings are within the specified radius from estimated dot.",
+                "operationId": "getOrganisationsInRadius",
+                "parameters": [
+                    {
+                        "name": "center_lat",
+                        "in": "query",
+                        "description": "latitude of center",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "float"
+                        }
+                    },
+                    {
+                        "name": "center_lng",
+                        "in": "query",
+                        "description": "longitude of center",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "float"
+                        }
+                    },
+                    {
+                        "name": "radius",
+                        "in": "query",
+                        "description": "radius of search",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "float"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/FullOrganisation"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/organisations/search/by/activity": {
             "get": {
                 "tags": [
